[package]
name = "saperke"
version = "0.1.0"
authors = ["boni0 <bonik.dawid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
druid = { git = "https://github.com/linebender/druid.git", rev = "0ebb799", features = ["svg", "im"] }
strum = "0.24"
strum_macros = "0.24"
webbrowser = "0.7.1"